removed text return option and added a smoke test

--- a/obsidian-plugin/package.json
+++ b/obsidian-plugin/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "ocr": "tsx cli.ts",
+    "check-ocr": "tsx check-ocr.ts",
     "lint": "eslint .",
     "prepare": "simple-git-hooks"
   },
